Skip chart example tests when headless (#1328)